Bug 396342 - automount mutliple sources does not work
Summary: automount mutliple sources does not work
Status: RESOLVED FIXED
Alias: None
Product: Smb4k
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Reinholdt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-09 17:30 UTC by pruje
Modified: 2018-07-21 19:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pruje 2018-07-09 17:30:40 UTC
Hi,
I'm using sm4k 2.1.0 on kubuntu 18.04.
I have added few sources and set auto mount option, but it mounts only the first one and never the others.
Thanks in advance.
Best regards
Comment 1 Alexander Reinholdt 2018-07-21 18:54:57 UTC
Git commit ea9e3bd49e7a591b575576f6532f1b14840bfedc by Alexander Reinholdt.
Committed on 21/07/2018 at 18:54.
Pushed by areinholdt into branch 'master'.

Fix auto mounting of shares.

M  +37   -44   core/smb4kcustomoptionsmanager.cpp

https://commits.kde.org/smb4k/ea9e3bd49e7a591b575576f6532f1b14840bfedc
Comment 2 Alexander Reinholdt 2018-07-21 19:08:16 UTC
Git commit 8033f56c2aa8dc3c7ff905173759c0cd23fa4a81 by Alexander Reinholdt.
Committed on 21/07/2018 at 19:07.
Pushed by areinholdt into branch '2.1'.

Fix auto mounting of shares.
(cherry picked from commit ea9e3bd49e7a591b575576f6532f1b14840bfedc)

M  +37   -44   core/smb4kcustomoptionsmanager.cpp

https://commits.kde.org/smb4k/8033f56c2aa8dc3c7ff905173759c0cd23fa4a81