Fix auto mounting of shares.

BUG: 396342
(cherry picked from commit ea9e3bd49e7a591b575576f6532f1b14840bfedc)